ANTLR_FEELParser/feelParser.py
# Generated from feel.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class feelParser ( Parser ):

    grammarFileName = "feel.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'for'", "'return'", "'in'", 
                     "'if'", "'then'", "'else'", "'some'", "'every'", "'satisfies'", 
                     "'instance'", "'of'", "'function'", "'external'", "'or'", 
                     "'and'", "'between'", "'null'", "'true'", "'false'", 
                     "'''", "<INVALID>", "<INVALID>", "<INVALID>", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "','", "'..'", "'.'", 
                     "'='", "'>'", "'<'", "'<='", "'>='", "'!='", "':'", 
                     "'->'", "'**'", "'+'", "'-'", "'*'", "'/'", "'!'", 
                     "'not'", "'@'" ]

    symbolicNames = [ "<INVALID>", "BooleanLiteral", "FOR", "RETURN", "IN", 
                      "IF", "THEN", "ELSE", "SOME", "EVERY", "SATISFIES", 
                      "INSTANCE", "OF", "FUNCTION", "EXTERNAL", "OR", "AND", 
                      "BETWEEN", "NULL", "TRUE", "FALSE", "QUOTE", "IntegerLiteral", 
                      "FloatingPointLiteral", "StringLiteral", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "COMMA", "ELIPSIS", "DOT", "EQUAL", "GT", "LT", "LE", 
                      "GE", "NOTEQUAL", "COLON", "RARROW", "POW", "ADD", 
                      "SUB", "MUL", "DIV", "BANG", "NOT", "AT", "Identifier", 
                      "WS", "COMMENT", "LINE_COMMENT", "ANY_OTHER_CHAR" ]

    RULE_compilation_unit = 0
    RULE_expression = 1
    RULE_textualExpression = 2
    RULE_parameters = 3
    RULE_namedParameters = 4
    RULE_namedParameter = 5
    RULE_positionalParameters = 6
    RULE_forExpression = 7
    RULE_iterationContexts = 8
    RULE_iterationContext = 9
    RULE_ifExpression = 10
    RULE_quantifiedExpression = 11
    RULE_r_type = 12
    RULE_r_list = 13
    RULE_functionDefinition = 14
    RULE_formalParameters = 15
    RULE_formalParameter = 16
    RULE_context = 17
    RULE_contextEntries = 18
    RULE_contextEntry = 19
    RULE_key = 20
    RULE_nameDefinition = 21
    RULE_nameDefinitionWithEOF = 22
    RULE_nameDefinitionTokens = 23
    RULE_iterationNameDefinition = 24
    RULE_iterationNameDefinitionTokens = 25
    RULE_additionalNameSymbol = 26
    RULE_conditionalOrExpression = 27
    RULE_conditionalAndExpression = 28
    RULE_comparisonExpression = 29
    RULE_relationalExpression = 30
    RULE_expressionList = 31
    RULE_additiveExpression = 32
    RULE_multiplicativeExpression = 33
    RULE_powerExpression = 34
    RULE_r_filterPathExpression = 35
    RULE_unaryExpression = 36
    RULE_unaryExpressionNotPlusMinus = 37
    RULE_primary = 38
    RULE_literal = 39
    RULE_atLiteral = 40
    RULE_atLiteralValue = 41
    RULE_simplePositiveUnaryTest = 42
    RULE_simplePositiveUnaryTests = 43
    RULE_simpleUnaryTests = 44
    RULE_positiveUnaryTest = 45
    RULE_positiveUnaryTests = 46
    RULE_unaryTestsRoot = 47
    RULE_unaryTests = 48
    RULE_endpoint = 49
    RULE_interval = 50
    RULE_qualifiedName = 51
    RULE_nameRef = 52
    RULE_nameRefOtherToken = 53
    RULE_reusableKeywords = 54

    ruleNames =  [ "compilation_unit", "expression", "textualExpression", 
                   "parameters", "namedParameters", "namedParameter", "positionalParameters", 
                   "forExpression", "iterationContexts", "iterationContext", 
                   "ifExpression", "quantifiedExpression", "r_type", "r_list", 
                   "functionDefinition", "formalParameters", "formalParameter", 
                   "context", "contextEntries", "contextEntry", "key", "nameDefinition", 
                   "nameDefinitionWithEOF", "nameDefinitionTokens", "iterationNameDefinition", 
                   "iterationNameDefinitionTokens", "additionalNameSymbol", 
                   "conditionalOrExpression", "conditionalAndExpression", 
                   "comparisonExpression", "relationalExpression", "expressionList", 
                   "additiveExpression", "multiplicativeExpression", "powerExpression", 
                   "r_filterPathExpression", "unaryExpression", "unaryExpressionNotPlusMinus", 
                   "primary", "literal", "atLiteral", "atLiteralValue", 
                   "simplePositiveUnaryTest", "simplePositiveUnaryTests", 
                   "simpleUnaryTests", "positiveUnaryTest", "positiveUnaryTests", 
                   "unaryTestsRoot", "unaryTests", "endpoint", "interval", 
                   "qualifiedName", "nameRef", "nameRefOtherToken", "reusableKeywords" ]

    EOF = Token.EOF
    BooleanLiteral=1
    FOR=2
    RETURN=3
    IN=4
    IF=5
    THEN=6
    ELSE=7
    SOME=8
    EVERY=9
    SATISFIES=10
    INSTANCE=11
    OF=12
    FUNCTION=13
    EXTERNAL=14
    OR=15
    AND=16
    BETWEEN=17
    NULL=18
    TRUE=19
    FALSE=20
    QUOTE=21
    IntegerLiteral=22
    FloatingPointLiteral=23
    StringLiteral=24
    LPAREN=25
    RPAREN=26
    LBRACE=27
    RBRACE=28
    LBRACK=29
    RBRACK=30
    COMMA=31
    ELIPSIS=32
    DOT=33
    EQUAL=34
    GT=35
    LT=36
    LE=37
    GE=38
    NOTEQUAL=39
    COLON=40
    RARROW=41
    POW=42
    ADD=43
    SUB=44
    MUL=45
    DIV=46
    BANG=47
    NOT=48
    AT=49
    Identifier=50
    WS=51
    COMMENT=52
    LINE_COMMENT=53
    ANY_OTHER_CHAR=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Compilation_unitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(feelParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(feelParser.EOF, 0)

        def getRuleIndex(self):
            return feelParser.RULE_compilation_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilation_unit" ):
                listener.enterCompilation_unit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilation_unit" ):
                listener.exitCompilation_unit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilation_unit" ):
                return visitor.visitCompilation_unit(self)
            else:
                return visitor.visitChildren(self)




    def compilation_unit(self):

        localctx = feelParser.Compilation_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilation_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.expression()
            self.state = 111
            self.match(feelParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return feelParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExpressionTextualContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a feelParser.ExpressionContext
            super().__init__(parser)
            self.expr = None # TextualExpressionContext
            self.copyFrom(ctx)

        def textualExpression(self):
            return self.getTypedRuleContext(feelParser.TextualExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionTextual" ):
                listener.enterExpressionTextual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionTextual" ):
                listener.exitExpressionTextual(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionTextual" ):
                return visitor.visitExpressionTextual(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = feelParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            localctx = feelParser.ExpressionTextualContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            localctx.expr = self.textualExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TextualExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(feelParser.FunctionDefinitionContext,0)


        def conditionalOrExpression(self):
            return self.getTypedRuleContext(feelParser.ConditionalOrExpressionContext,0)


        def getRuleIndex(self):
            return feelParser.RULE_textualExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTextualExpression" ):
                listener.enterTextualExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTextualExpression" ):
                listener.exitTextualExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTextualExpression" ):
                return visitor.visitTextualExpression(self)
            else:
                return visitor.visitChildren(self)




    def textualExpression(self):

        localctx = feelParser.TextualExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_textualExpression)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [feelParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.functionDefinition()
                pass
            elif token in [feelParser.BooleanLiteral, feelParser.FOR, feelParser.IF, feelParser.SOME, feelParser.EVERY, feelParser.NULL, feelParser.IntegerLiteral, feelParser.FloatingPointLiteral, feelParser.StringLiteral, feelParser.LPAREN, feelParser.LBRACE, feelParser.LBRACK, feelParser.RBRACK, feelParser.EQUAL, feelParser.GT, feelParser.LT, feelParser.LE, feelParser.GE, feelParser.NOTEQUAL, feelParser.ADD, feelParser.SUB, feelParser.NOT, feelParser.AT, feelParser.Identifier]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.conditionalOrExpression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return feelParser.RULE_parameters

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ParametersNamedContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a feelParser.ParametersContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(feelParser.LPAREN, 0)
        def namedParameters(self):
            return self.getTypedRuleContext(feelParser.NamedParametersContext,0)

        def RPAREN(self):
            return self.getToken(feelParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametersNamed" ):
                listener.enterParametersNamed(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametersNamed" ):
                listener.exitParametersNamed(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametersNamed" ):
                return visitor.visitParametersNamed(self)
            else:
                return visitor.visitChildren(self)


    class ParametersEmptyContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a feelParser.ParametersContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(feelParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(feelParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametersEmpty" ):
                listener.enterParametersEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametersEmpty" ):
                listener.exitParametersEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametersEmpty" ):
                return visitor.visitParametersEmpty(self)
            else:
                return visitor.visitChildren(self)


    class ParametersPositionalContext(ParametersContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a feelParser.ParametersContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(feelParser.LPAREN, 0)
        def positionalParameters(self):
            return self.getTypedRuleContext(feelParser.PositionalParametersContext,0)

        def RPAREN(self):
            return self.getToken(feelParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametersPositional" ):
                listener.enterParametersPositional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametersPositional" ):
                listener.exitParametersPositional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametersPositional" ):
                return visitor.visitParametersPositional(self)
            else:
                return visitor.visitChildren(self)



    def parameters(self):

        localctx = feelParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameters)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = feelParser.ParametersEmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(feelParser.LPAREN)
                self.state = 120
                self.match(feelParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = feelParser.ParametersNamedContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(feelParser.LPAREN)
                self.state = 122
                self.namedParameters()
                self.state = 123
                self.match(feelParser.RPAREN)
                pass

            elif la_ == 3:
                localctx = feelParser.ParametersPositionalContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.match(feelParser.LPAREN)
                self.state = 126
                self.positionalParameters()
                self.state = 127
                self.match(feelParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamedParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namedParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(feelParser.NamedParameterContext)
            else:
                return self.getTypedRuleContext(feelParser.NamedParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(feelParser.COMMA)
            else:
                return self.getToken(feelParser.COMMA, i)

        def getRuleIndex(self):
            return feelParser.RULE_namedParameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedParameters" ):
                listener.enterNamedParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedParameters" ):
                listener.exitNamedParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamedParameters" ):
                return visitor.visitNamedParameters(self)
            else:
                return visitor.visitChildren(self)




    def namedParameters(self):

        localctx = feelParser.NamedParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_namedParameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.namedParameter()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==feelParser.COMMA:
                self.state = 132
                self.match(feelParser.COMMA)
                self.state = 133
                self.namedParameter()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamedParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # NameDefinitionContext
            self.value = None # ExpressionContext

        def COLON(self):
            return self.getToken(feelParser.COLON, 0)

        def nameDefinition(self):
            return self.getTypedRuleContext(feelParser.NameDefinitionContext,0)


        def expression(self):
            return self.getTypedRuleContext(feelParser.ExpressionContext,0)


        def getRuleIndex(self):
            return feelParser.RULE_namedParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedParameter" ):
                listener.enterNamedParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedParameter" ):
                listener.exitNamedParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamedParameter" ):
                return visitor.visitNamedParameter(self)
            else:
                return visitor.visitChildren(self)




    def namedParameter(self):
